Refactor/domain user (#87)
* feat: update NotificationControllerTest to use UserModel for receiver in notifications

* feat: enhance NotificationSortFieldJpa with comparison methods and expression retrieval

* feat: remove unnecessary override annotations from NotificationController methods

* feat: add ReviewSortField and ReviewSortFieldJpa for review sorting functionality

* feat: implement getReviews endpoint and update ReviewController methods

* feat: implement getReviews endpoint and update ReviewController methods

* refactor: clean up CursorPaginationHelper by removing redundant code

* feat: add ReviewQueryRepository to ReviewService for enhanced review querying

* feat: add ReviewApiSpec interface and update ReviewController for review management

* test: update ReviewControllerTest for improved readability and response validation

* feat: add getReviews method to ReviewFacade for retrieving reviews with pagination

* test: add unit tests for getReviews method in ReviewFacade

* feat: enhance review model and request validation with improved data handling

* feat: update movie ratings and review counts in data.sql for improved accuracy

* test: add unit tests for ReviewQueryRepositoryImpl to validate review retrieval and pagination

* test: update ReviewServiceTest to modify review rating based on existing value

* refactor: streamline ReviewEntityMapper by simplifying content and author mapping

* refactor: enhance ReviewEntityMapper by introducing methods for selective content and author mapping

* feat: implement PlaylistApiSpec interface and refactor PlaylistController for improved playlist management

* feat: implement PlaylistApiSpec interface and refactor PlaylistController for improved playlist management

* refactor: reorganize PlaylistSubscriberRepository methods for improved clarity and efficiency

* refactor: replace custom queries with EntityGraph for optimized fetching in JpaPlaylistRepository and JpaReviewRepository

* feat: enhance Playlist