@@ -63,7 +63,6 @@ class PlaylistContentRepositoryImplTest {
     void setUp() {
         UserModel owner = userRepository.save(
             UserModel.create(
-                UserModel.AuthProvider.EMAIL,
                 "owner@example.com",
                 "소유자",
                 "encodedPassword"
@@ -72,9 +71,9 @@ class PlaylistContentRepositoryImplTest {
 
         playlist = playlistRepository.save(
             PlaylistModel.create(
-                owner,
                 "테스트 플레이리스트",
-                "설명"
+                "설명",
+                owner
             )
         );
 
@@ -157,8 +156,8 @@ class PlaylistContentRepositoryImplTest {
             // then
             List<PlaylistContentEntity> playlistContents = jpaPlaylistContentRepository.findAll();
             assertThat(playlistContents).hasSize(1);
-            assertThat(playlistContents.get(0).getPlaylist().getId()).isEqualTo(playlist.getId());
-            assertThat(playlistContents.get(0).getContent().getId()).isEqualTo(content.getId());
+            assertThat(playlistContents.getFirst().getPlaylist().getId()).isEqualTo(playlist.getId());
+            assertThat(playlistContents.getFirst().getContent().getId()).isEqualTo(content.getId());
         }
 
         @Test
@@ -189,7 +188,6 @@ class PlaylistContentRepositoryImplTest {
             // given
             UserModel anotherOwner = userRepository.save(
                 UserModel.create(
-                    UserModel.AuthProvider.EMAIL,
                     "another@example.com",
                     "다른 소유자",
                     "encodedPassword"
@@ -198,9 +196,9 @@ class PlaylistContentRepositoryImplTest {
 
             PlaylistModel anotherPlaylist = playlistRepository.save(
                 PlaylistModel.create(
-                    anotherOwner,
                     "다른 플레이리스트",
-                    "설명"
+                    "설명",
+                    anotherOwner
                 )
             );
 
@@ -256,7 +254,7 @@ class PlaylistContentRepositoryImplTest {
             assertThat(deleted).isTrue();
             List<PlaylistContentEntity> remaining = jpaPlaylistContentRepository.findAll();
             assertThat(remaining).hasSize(1);
-            assertThat(remaining.get(0).getContent().getId()).isEqualTo(anotherContent.getId());
+            assertThat(remaining.getFirst().getContent().getId()).isEqualTo(anotherContent.getId());
         }
 
         @Test
@@ -276,7 +274,6 @@ class PlaylistContentRepositoryImplTest {
             // given
             UserModel anotherOwner = userRepository.save(
                 UserModel.create(
-                    UserModel.AuthProvider.EMAIL,
                     "another@example.com",
                     "다른 소유자",
                     "encodedPassword"
@@ -285,9 +282,9 @@ class PlaylistContentRepositoryImplTest {
 
             PlaylistModel anotherPlaylist = playlistRepository.save(
                 PlaylistModel.create(
-                    anotherOwner,
                     "다른 플레이리스트",
-                    "설명"
+                    "설명",
+                    anotherOwner
                 )
             );
 
@@ -302,7 +299,7 @@ class PlaylistContentRepositoryImplTest {
             assertThat(deleted).isTrue();
             List<PlaylistContentEntity> remaining = jpaPlaylistContentRepository.findAll();
             assertThat(remaining).hasSize(1);
-            assertThat(remaining.get(0).getPlaylist().getId()).isEqualTo(anotherPlaylist.getId());
+            assertThat(remaining.getFirst().getPlaylist().getId()).isEqualTo(anotherPlaylist.getId());
         }
     }
 }
